--- a/sources/manifest.json
+++ b/sources/manifest.json
@@ -1,26 +1,24 @@
 {
 	"name": "Narod Downloader",
-	"version": "1.0.7",
-	"description": "Download files from Yandex.Disk (narod.yandex.ru) without typing all these annoying CAPTCHAs.",
+	"version": "1.0.84",
+	"description": "Download files from Yandex.Narod (narod.yandex.ru) with no need to type annoying captcha.",
+	"author": "Alex Musayev",  
 	"background_page": "background.html",
 	"page_action": {
-		"default_icon" : "images/icon-18.png",
+		"default_icon": "images/icon-16.png",
 		"default_title": "Get the file!",
 		"popup": "popup.html"
 	},
 	"permissions": [
-    		"tabs",
+    	"tabs",
 		"http://narod.ru/",
 		"http://narod.yandex.ru/",
 		"http://narod.paradigm.ru/"
 	],
 	"icons": {
-		"16" : "images/icon-16.png",
-		"18" : "images/icon-18.png",
-		"32" : "images/icon-32.png",
-		"48" : "images/icon-48.png",
-		"128" : "images/icon-128.png",
-		"256" : "images/icon-256.png"
+		"16": "images/icon-16.png",
+		"48": "images/icon-48.png",
+		"128": "images/icon-128.png"
 	},
 	"options_page":	"settings.html"
 }
