--- a/sources/manifest.json
+++ b/sources/manifest.json
@@ -1,12 +1,23 @@
 {
 	"name": "Narod Downloader",
-	"version": "1.1.0",
+	"version": "1.2.0",
+	"manifest_version": 2,
+
 	"description": "Download files from Yandex.Narod (narod.yandex.ru) with no need to type annoying captcha.",
-	"background_page": "background.html",
+	"icons": {
+		"16": "images/icon-16.png",
+		"48": "images/icon-48.png",
+		"128": "images/icon-128.png"
+	},
 	"page_action": {
 		"default_icon": "images/icon-16.png",
 		"default_title": "Get the file!",
-		"popup": "popup.html"
+		"default_popup": "popup.html"
+	},
+	"minimum_chrome_version": "24",
+	"background": {
+		"scripts": ["background.js"],
+		"persistent": false
 	},
 	"permissions": [
     	"tabs",
@@ -14,10 +25,5 @@
 		"http://narod.yandex.ru/",
 		"http://narod.paradigm.ru/"
 	],
-	"icons": {
-		"16": "images/icon-16.png",
-		"48": "images/icon-48.png",
-		"128": "images/icon-128.png"
-	},
 	"options_page":	"settings.html"
 }
