--- a/sources/manifest.json
+++ b/sources/manifest.json
@@ -1,29 +1,20 @@
 {
 	"name": "Narod Downloader",
 	"version": "1.2.0",
-	"manifest_version": 2,
-
+	"permissions": [
+		"webRequest",
+		"webRequestBlocking",
+		"http://narod.ru/",
+		"http://narod.yandex.ru/"
+	],
+	"background": {
+		"scripts": ["background.js"]
+	},
 	"description": "Download files from Yandex.Narod (narod.yandex.ru) with no need to type annoying captcha.",
 	"icons": {
 		"16": "images/icon-16.png",
 		"48": "images/icon-48.png",
 		"128": "images/icon-128.png"
 	},
-	"page_action": {
-		"default_icon": "images/icon-16.png",
-		"default_title": "Get the file!",
-		"default_popup": "popup.html"
-	},
-	"minimum_chrome_version": "24",
-	"background": {
-		"scripts": ["background.js"],
-		"persistent": false
-	},
-	"permissions": [
-    	"tabs",
-		"http://narod.ru/",
-		"http://narod.yandex.ru/",
-		"http://narod.paradigm.ru/"
-	],
-	"options_page":	"settings.html"
+	"manifest_version": 2
 }
